package grpc

import (
	"context"
	"log"

	pb "code-audit-mcp/proto"
)

// IndexerService implements pb.IndexerServer
type IndexerService struct {
	pb.UnimplementedIndexerServer
}

// NewIndexerService creates a new indexer service
func NewIndexerService() *IndexerService {
	return &IndexerService{}
}

// BuildIndex implements pb.Indexer/BuildIndex
func (s *IndexerService) BuildIndex(ctx context.Context, req *pb.BuildIndexRequest) (*pb.BuildIndexResponse, error) {
	log.Printf("üî® Building index for: %s", req.FilePath)

	// TODO: Implement actual indexing logic using BadgerDB

	resp := &pb.BuildIndexResponse{
		Success:          true,
		IndexId:          "idx_" + req.FilePath,
		FunctionsIndexed: 10,
		ClassesIndexed:   5,
		VariablesIndexed: 50,
		ErrorMessage:     "",
	}

	return resp, nil
}

// QueryFunction implements pb.Indexer/QueryFunction
func (s *IndexerService) QueryFunction(ctx context.Context, req *pb.QueryFunctionRequest) (*pb.QueryFunctionResponse, error) {
	log.Printf("üîç Querying function: %s", req.FunctionName)

	// TODO: Implement actual function query logic

	functions := []*pb.FunctionInfo{
		{
			Id:                   "func_1",
			Name:                 req.FunctionName,
			FilePath:             "/path/to/file.go",
			StartLine:            10,
			EndLine:              25,
			Signature:            "func example() error",
			CyclomaticComplexity: 3,
			Parameters:           []string{"ctx", "data"},
			ReturnType:           "error",
		},
	}

	resp := &pb.QueryFunctionResponse{
		Functions:  functions,
		TotalCount: int32(len(functions)),
	}

	return resp, nil
}

// QueryClass implements pb.Indexer/QueryClass
func (s *IndexerService) QueryClass(ctx context.Context, req *pb.QueryClassRequest) (*pb.QueryClassResponse, error) {
	log.Printf("üèõÔ∏è Querying class: %s", req.ClassName)

	// TODO: Implement actual class query logic

	classes := []*pb.ClassInfo{
		{
			Id:         "class_1",
			Name:       req.ClassName,
			FilePath:   "/path/to/file.java",
			StartLine:  5,
			EndLine:    100,
			BaseClass:  "BaseClass",
			Interfaces: []string{"Interface1", "Interface2"},
			Methods: []*pb.MethodInfo{
				{
					Id:         "method_1",
					Name:       "getData",
					IsStatic:   false,
					IsPrivate:  false,
					ReturnType: "String",
				},
			},
			Fields: []string{"id", "name", "data"},
		},
	}

	resp := &pb.QueryClassResponse{
		Classes:    classes,
		TotalCount: int32(len(classes)),
	}

	return resp, nil
}

// QueryCallers implements pb.Indexer/QueryCallers
func (s *IndexerService) QueryCallers(ctx context.Context, req *pb.QueryCallersRequest) (*pb.QueryCallersResponse, error) {
	log.Printf("‚òéÔ∏è Querying callers for: %s", req.FunctionId)

	// TODO: Implement actual callers query logic

	callers := []*pb.CallInfo{
		{
			CallerId:   "func_caller_1",
			CallerName: "caller1",
			CalleeId:   req.FunctionId,
			CalleeName: "target",
			CallLine:   25,
			CallType:   "direct",
		},
	}

	resp := &pb.QueryCallersResponse{
		Callers:    callers,
		TotalCount: int32(len(callers)),
	}

	return resp, nil
}

// QueryCallees implements pb.Indexer/QueryCallees
func (s *IndexerService) QueryCallees(ctx context.Context, req *pb.QueryCalleesRequest) (*pb.QueryCalleesResponse, error) {
	log.Printf("üìû Querying callees for: %s", req.FunctionId)

	// TODO: Implement actual callees query logic

	callees := []*pb.CallInfo{
		{
			CallerId:   req.FunctionId,
			CallerName: "source",
			CalleeId:   "func_callee_1",
			CalleeName: "callee1",
			CallLine:   30,
			CallType:   "direct",
		},
	}

	resp := &pb.QueryCalleesResponse{
		Callees:    callees,
		TotalCount: int32(len(callees)),
	}

	return resp, nil
}

// SearchSymbol implements pb.Indexer/SearchSymbol
func (s *IndexerService) SearchSymbol(req *pb.SearchSymbolRequest, stream pb.Indexer_SearchSymbolServer) error {
	log.Printf("üîé Searching symbols matching: %s", req.Pattern)

	// TODO: Implement actual symbol search logic

	results := []*pb.SearchSymbolResponse{
		{
			SymbolId:       "sym_1",
			SymbolName:     "myFunction",
			SymbolType:     "function",
			FilePath:       "/path/to/file.go",
			LineNumber:     10,
			RelevanceScore: 0.95,
		},
		{
			SymbolId:       "sym_2",
			SymbolName:     "myClass",
			SymbolType:     "class",
			FilePath:       "/path/to/file.java",
			LineNumber:     5,
			RelevanceScore: 0.85,
		},
	}

	for _, result := range results {
		if err := stream.Send(result); err != nil {
			log.Printf("‚ùå Error sending search result: %v", err)
			return err
		}
	}

	log.Printf("‚úÖ Symbol search completed")
	return nil
}
